# ucx-demo

00_ucx_perftest/: README.md
01_uct_am_hello_world/: Makefile  README.md  uct_hello_world.c
02_ucp_tag_GPUP2P_hello_world/: Makefile  README.md  hello_world_util.h  ucp_hello_world.c
03_ucp_am_stream_tag_client_server/: Makefile  README.md  hello_world_util.h  ucp_client_server.c
04_ucp_rma_client_server/: CMakeLists.txt  README.md  client.cpp  server.cpp  ucx_util.cpp  ucx_util.h
